"#8 implemented new feature for updating poi"
